About icon border added and fixed portfolio hidden cards overlap

--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1066,6 +1066,7 @@ Portfolio
 .our-portfolio .item:hover .hidden-content {
   top: -100px;
   opacity: 1;
+  z-index: 100;
   visibility: visible;
 }
 
